# backend/internal/interfaces/rest/v1/dto/request/register_request.go
@@ -3,11 +3,11 @@ package request
 import "github.com/HappyNaCl/Cavent/backend/internal/app/command"
 
 type RegisterRequest struct {
-	Name 			string `json:"name" form:"name"`
-	Password 		string `json:"password" form:"password"`
-	ConfirmPassword string `json:"confirmPassword" form:"confirmPassword"`
-	Email 			string `json:"email" form:"email"`
-	InviteCode 		*string `json:"inviteCode" form:"inviteCode"`
+	Name 			string `json:"name" form:"name" binding:"required"`
+	Password 		string `json:"password" form:"password" binding:"required"`
+	ConfirmPassword string `json:"confirmPassword" form:"confirmPassword" binding:"required"`
+	Email 			string `json:"email" form:"email" binding:"required"`
+	InviteCode 		*string `json:"inviteCode" form:"inviteCode" binding:"required"`
 }
 
 func (r RegisterRequest) ToCommand() *command.RegisterUserCommand {
