# backend/internal/interfaces/rest/v1/dto/response/login_response.go
@@ -1,5 +1,5 @@
 package response
 
-type RegisterResponse struct {
+type LoginResponse struct {
 	AccessToken string `json:"accessToken"`
 }
